# C-garbage-collector

./: .gitignore  CMakeLists.txt  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
build_asan/Testing/Temporary/: CTestCostData.txt
cmake/: GCLibConfig.cmake.in
examples/: CMakeLists.txt  explicit_roots.cpp  quick_start.cpp  weak_arrays.cpp  worker_threads.cpp
include/gc/: ChunkHeader.hpp  GC.hpp  GCManager.hpp  RootScanner.hpp  gc_new.hpp  gc_ptr.hpp  gc_root.hpp  gc_weak_ptr.hpp
src/: GCManager.cpp  RootScanner.cpp  main.cpp
tests/: gc_tests.cpp
